--- a/config.toml
+++ b/config.toml
@@ -5,9 +5,9 @@ theme = "judica"
 copyright = "&copy; Judica, Inc 2020 | contact@judica.org | <a class='darkmode-switch'> dark/light theme</a>"
 
 [[menu.main]]
-    identifier = "mission"
-    name = "mission."
-    url = "/mission/"
+    identifier = "about"
+    name = "about."
+    url = "/about/"
     weight = -160
 [[menu.main]]
     identifier = "software"
