Not sure what I changed but a lot of incremental stuff

--- a/config.toml
+++ b/config.toml
@@ -30,3 +30,36 @@ googleAnalytics= "UA-175497336-1"
     slogan = "restore the  balance"
     brand="judica."
     headerimage="img/wizard2.gif"
+    description = "we're building cutting edge bitcoin technology at judica"
+    images=["/img/og-img.png"]
+    title="judica.org -- restore the balance"
+
+[deployment]
+# By default, files are uploaded in an arbitrary order.
+# Files that match the regular expressions in the "Order" list
+# will be uploaded first, in the listed order.
+order = [".jpg$", ".gif$"]
+
+
+[[deployment.targets]]
+# An arbitrary name for this target.
+name = "aws-deployment"
+
+# S3; see https://gocloud.dev/howto/blob/#s3
+URL = "s3://judica.org?region=us-east-1"
+
+# If you are using a CloudFront CDN, deploy will invalidate the cache as needed.
+cloudFrontDistributionID = "EJJRXAHC8FVML"
+
+# Optionally, you can include or exclude specific files.
+# See https://godoc.org/github.com/gobwas/glob#Glob for the glob pattern syntax.
+# If non-empty, the pattern is matched against the local path.
+# All paths are matched against in their filepath.ToSlash form.
+# If exclude is non-empty, and a local or remote file's path matches it, that file is not synced.
+# If include is non-empty, and a local or remote file's path does not match it, that file is not synced.
+# As a result, local files that don't pass the include/exclude filters are not uploaded to remote,
+# and remote files that don't pass the include/exclude filters are not deleted.
+# include = "**.html" # would only include files with ".html" suffix
+# exclude = "**.{jpg, png}" # would exclude files with ".jpg" or ".png" suffix
+
+
